Fix for zoom in/out (i.e. control + or control -) causes the breadcrums to get out of place
https://www.pivotaltracker.com/story/show/9319907

--- a/media/css/batucada.css
+++ b/media/css/batucada.css
@@ -498,11 +498,12 @@ header {}
     
   #breadcrumbs {
     height: 31px;
-    width: 1000px;
-    margin-left: 132px;
+    width: 990px;
+    margin: auto auto;
     background: #fff;
     font-size: 11px;
     line-height: 31px;
+	padding-left:10px
   }
     #breadcrumbs nav{
     }
